--- a/Tehtävä1.html
+++ b/Tehtävä1.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script type="text/javascript" src= "ehtotehtäviä.js">
+
+    </script>
   </head>
   <body>
-    
+
   </body>
 </html>
