--- a/Tehtävä1.html
+++ b/Tehtävä1.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript" src= "ehtotehtäviä.js">
+     <script type="text/javascript" src= "ehtotehtäviä.js">
 
-    </script>
-  </head>
+     </script>
+   </head>
   <body>
-
+    <article class='vieri' id='yksi'>
+    <h1>Tehtävä 1</h1>
+    <p>Tee ohjelma, joka tarkastaa, onko annettu luku positiivinen vai negatiivinen</p>
+<form class="" action="Tehtävä1.html" method="post">
+   <p>Anna luku: <input type="text" id="aloitus" value=""></p>
+   <button type="button" name="button" onclick="tarkastaEtumerkki()">Tarkasta etumerkki</button>
+   </form>
+   <p> <div id="tulosta"></div> </p>
+   </article>
   </body>
 </html>
