--- a/Tehtävä1.html
+++ b/Tehtävä1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-     <script type="text/javascript" src= "ehtotehtäviä.js">
+     <script type="text/javascript" src= "ehtotehtäviä1.js">
 
      </script>
    </head>
