--- a/Tehtävä1.html
+++ b/Tehtävä1.html
@@ -2,12 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-     <script type="text/javascript" src= "ehtotehtäviä1.js">
+     <title></title>
+      <link rel="stylesheet" href="ehtoTehtäviä.css">
+      <script type="text/javascript" src= "ehtotehtäviä1.js">
 
-     </script>
-   </head>
-  <body>
+      </script>
+    </head>
+   <body>
     <article class='vieri' id='yksi'>
     <h1>Tehtävä 1</h1>
     <p>Tee ohjelma, joka tarkastaa, onko annettu luku positiivinen vai negatiivinen</p>
