--- a/keskiviikon 19.8.2020 tehtavat/tehtava.html
+++ b/keskiviikon 19.8.2020 tehtavat/tehtava.html
@@ -6,12 +6,11 @@
       <link rel="stylesheet" href="tehtava1.css">
       <script type="text/javascript" src="tehtava1.js">
 
-
       </script>
     </head>
    <body>
 
-      <article class="vieri" id="tehtava1"
+      <article class="vieri" id="eka"
         <h1>Tehtävä 1<h1>
         <p>Tee ohjelma joka pyytää käyttäjältä kolmea numeroa ja laittaa ne järjestykseen</p>
     <form class="" action="tehtava1.html" method="post">
