--- a/Tehtävä1.html
+++ b/Tehtävä1.html
@@ -4,7 +4,7 @@
      <meta charset="utf-8">
       <title></title>
        <link rel="stylesheet" href="ehtoTehtäviä.css">
-       <script type="text/javascript" src= "ehtotehtäviä1.js">
+       <script type="text/javascript" src= "ehtotehtävä1.js">
 
        </script>
      </head>
