--- a/silmukat/tehtava1.html
+++ b/silmukat/tehtava1.html
@@ -9,13 +9,11 @@
       </script>
     </head>
     <body>
-      <h1>Silmukka -harjoitustehtäviä maanantaiksi 24.8.2020 (1-5) sekä keskiviikoksi (6-11)</h1>
-      <h1>Löytyy myös Moodlesta viikolta 3</h1>
-       <article class='vieri' id='eka'>
+      <h1>Silmukka -harjoitustehtäviä </h1>
+       <article class='vieri'>
       <h1>Tehtävä 1</h1>
       <p>Tee ohjelma, joka pyytää käyttäjältä parillista lukua
-      ja tulostaa tämän jälkeen kaikki parilliset luvut siihen asti
-      poislukien 0:n</p>
+      ja tulostaa tämän jälkeen kaikki parilliset luvut </p>
       <form class="" action="tehtava1.html" method="post">
         <p>Anna parillinen luku: <input type="text" id="luku" value=""></p>
         <button type="button" name="button" onclick="Parilliset()">Tulosta parilliset</button>
@@ -24,11 +22,10 @@
     </article>
 
 
-    <article  class='vieri' id='kaksi'>
+    <article  class='vieri'>
       <h1>Tehtävä 2</h1>
       <p>Kirjoita ohjelma, joka muuntaa käyttäjän antaman sanan salasanaksi
-      siten, että laittaa joka toiseksi kirjaimeksi ison Ö-kirjaimen, eli
-      jos sana on moi --> mÖoÖiÖ< </p>
+      siten, että laittaa joka toiseksi kirjaimeksi ison Ö-kirjaimen.</p>
       <form class="" action="tehtava1.html" method="post">
         <p>Anna sana: <input type="text" id="sana" value=""></p>
         <button type="button" name="button" onclick="Salasanaksi()">Muuta salasanaksi</button>
@@ -36,7 +33,7 @@
       </form>
    </article>
 
-   <article  class='vieri' id='kolmas'>
+   <article  class='vieri'>
        <h1>Tehtävä 3</h1>
        <p>Kirjoita ohjelma, joka tarastaa, onko antamassasi sanassa ö-kirjainta
        ja kirjoittaa vastaukseksi joko: on tai ei ole</p>
@@ -46,9 +43,9 @@
      </article>
 
 
-     <article  class='vieri' id='neljas'>
+     <article  class='vieri' >
      <h1>Tehtävä 4</h1>
-     <p>Kirjoita ohjelma, joka laskee annetun luvun kertoman<br> (esim: 4 -> 4*3*2*1 = 24)</p>
+     <p>Kirjoita ohjelma, joka laskee annetun luvun kertoman<br></p>
        <form class="" action="index.html" method="post">
          <p>Anna luku, josta lasketaan kertoma: <input type="text" id="skertoma" value=""></p>
          <button type="button" name="button" onclick="Kertoma()">Laske kertoma</button>
@@ -56,34 +53,31 @@
        </form>
      </article>
 
-     <article  class='vieri' id='viides'>
+     <article  class='vieri'>
          <h1>Tehtävä 5</h1>
-           <p>Kirjoita ohjelma, joka tulostaa näytölle luvut 1-100, kuitenkin
-           siten, että jos luku on 3:lla jaollinen, tulostetaan hip ja
-         viidellä jaollinen tulostetaan heijaa ja jos sekä viidellä että kolmella
-       jaollinen, tulostetaan hipheijaa </p>
+           <p>Kirjoita ohjelma, joka tulostaa näytölle luvut 1-100</p>
          <button type="button" id="button" onclick="Lukutulostus()">Tulosta</button>
          <div id="tulostaluvut"></div>
        </article>
 
 
-       <article  class='vieri' id='kuudes'>
+       <article  class='vieri'>
          <h1>Tehtävä 6</h1>
            <p>Kirjoita ohjelma, joka tulostaa 10 ensimmäistä numeroa</p>
          <button type="button" id="seiska" onclick="kymmenenNum()">10 Ensimmäistä</button>
          <div id="10luvut"></div>
        </article>
 
-       <article  class='vieri' id='seiska'>
+       <article  class='vieri'>
        <h1>Tehtävä 7</h1>
          <p>Kirjoita ohjelma, joka laskee 10 ensimmäistä numeroa yhteen</p>
        <button type="button" id="button" onclick="yhteenlasku()">Laske 10 ens. yhteen</button>
        <div id="lukujenTulostuss"></div>
        </article>
 
-       <article  class='vieri' id='kasi'>
+       <article  class='vieri'>
        <h1>Tehtävä 8</h1>
-         <p>Kirjoita ohjelma, joka kysyy käyttäjältä kahta lukua ja laskee ensimmäisen potenssiin toinen esim. 5 ja 2 = 5<sup>2</sup> = 25</p>
+         <p>Kirjoita ohjelma, joka kysyy käyttäjältä kahta lukua ja laskee ensimmäisen potenssiin toinen</p>
          <p>Anna korotettava luku: <input type="text" id="korotett" value=""> </p>
          <p>Anna potenssi: <input type="text" id="potens" value=""> </p>
        <button type="button" id="button" onclick="potenssilasku()">Laske</button>
