--- a/silmukat/tehtava1.html
+++ b/silmukat/tehtava1.html
@@ -84,7 +84,7 @@
        <div id="lukujenTulostusd"></div>
        </article>
 
-       <article  class='vieri' id='ysi'>
+       <article  class='vieri' >
 <h1>Tehtävä 9</h1>
   <p>Kirjoita ohjelma, joka etsii annetusta luvuista suurimman ja pienimmän arvon</p>
   <p>Anna 1. luku: <input type="text" id="taul[0]" value=""> </p>
@@ -96,7 +96,7 @@
   <div id="lukujenTulostusj"></div>
 </article>
 
-<article  class='vieri' id='kymppi'>
+<article  class='vieri' >
 <h1>Tehtävä 10</h1>
   <p>Muokataan salasalatehtävää siten, että se arpoo kirjaimen Ö:n sijasta</p>
   <p>Anna muokattava salasana:  <input type="text" id="password" value="">
@@ -104,9 +104,9 @@
 <div id="lukujenTulostusk"></div>
 </article>
 
-<article  class='vieri' id='ykstoist'>
+<article  class='vieri' >
 <h1>Tehtävä 11</h1>
-  <p>Tee ohjelma, joka pyytää käyttäjältä kahta numeroa (jälkimmäisen tulee olla isompi) ja tulostaa tuolla välillä parilliset ja parittomat numerot sekä niiden summat</p>
+  <p>Tee ohjelma, joka pyytää käyttäjältä kahta numeroa (jälkimmäisen tulee olla isompi!) ja tulostaa tuolla välillä parilliset ja parittomat numerot sekä niiden summat</p>
   <p>Anna pienempi numero:  <input type="text" id="pienem" value=""></p>
   <p>Anna isompi numero:  <input type="text" id="isompi" value=""></p>
 <button type="button" id="button" onclick="lisettomat()">näytä parilliset ja parittomat erikseen sekä niiden summa</button>
