--- a/perjantainTehtavat/tehtavat.html
+++ b/perjantainTehtavat/tehtavat.html
@@ -7,9 +7,8 @@
       <script type="text/javascript" src="tehtavat.js"></script>
 </head>
 <body>
-<article class='vieri' id='yksi'>
-  <h1>Switch-case ja taulukko-harjoitustehtäviä perjantaiksi</h1>
-  <h1>Löytyy myös Moodlesta viikolta 3</h1>
+<article class='vieri'>
+
       <h1>Tehtävä 1</h1>
       <p>Tee ohjelma, jolle voi syöttää Scrabble-pelin sanan ja ohjelma laskee kirjain pisteet seuraavasti</p>
   <form class="" action="tehtavat.html" method="post">
