--- a/perjantainTehtavat/tehtava2.html
+++ b/perjantainTehtavat/tehtava2.html
@@ -9,7 +9,7 @@
   <body>
 
 
-<article class='vieri' id='kaksi'>
+<article class='vieri'>
   <h1>Tehtävä 2</h1>
   <p>Tee ohjelma, joka arpoo lottonumerot (7 kpl)</p>
   <button type="button" name="button" onclick="Lotto()">Arvo numerot</button>
@@ -17,7 +17,7 @@
   <div id="taulu"></div>
 </article>
 
-<article class='vieri' id='kaksi'>
+<article class='vieri'>
         <h1>Tehtävä 3</h1>
       <p>Tee ohjelma, joka muuntaa määritetyn (javascriptissä) 2-uloitteisen taulukon taulukkomuotoon</p>
       <p>Esimerkiksi [[1, 2, 1, 24], [8, 11, 9, 4], [7, 0, 7, 27], [7, 4, 28, 14], [3, 10, 26, 7]]</p>
