--- a/perjantainTehtavat/tehtava4.html
+++ b/perjantainTehtavat/tehtava4.html
@@ -7,7 +7,7 @@
       <script type="text/javascript" src="tehtava4.js"></script>
   </head>
 <body>
-  <article class='vieri' id='neljäs'>
+  <article class='vieri'>
         <h1>Tehtävä 4</h1>
         <p>Tee ohjelma, joka tekee taulukon kaikista korttipakan korteista (2 sisäkkäistä silmukkaa) ja sen jälkeen sekoittaa "pakan" ja arpoo 5 korttia sieltä</p>
         <button type="button" name="button" onclick="Kortit()">Arvo 5 korttia</button>
